# jit-demo

./: .gitignore  Cargo.toml  README.md  data.json  rust-toolchain
_slides/: SLIDES.md
compile/: Cargo.toml
compile/src/: main.rs  transformations.rs
functions/: Cargo.toml
functions/src/: lib.rs
runner/: Cargo.toml  build.rs
runner/benches/: test.rs
runner/src/: interpreted.rs  lib.rs  main.rs
runner/src/jit/: build_fn.rs  exec_engine.rs  io.rs  mod.rs  optimizing.rs
shared/: Cargo.toml
shared/src/: lib.rs
