[package]
name = "functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# regex = { version = "1.10.2", no-default-features = true, features = [
#     "unicode",
# ] }
shared = { path = "../shared" }
