[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
shared = { path = "../shared", features = ["std"] }
libc = "0.2.147"
llvm-sys = { version = "170", features = ["prefer-dynamic"] }
criterion = "0.5.1"

[[bench]]
name = "test"
harness = false
